[gd_scene load_steps=9 format=3 uid="uid://ba7bl7uyl1oq8"]

[ext_resource type="Script" uid="uid://csgdsh0y6i120" path="res://scripts/UI/main_menu.gd" id="1_qwnig"]
[ext_resource type="Texture2D" uid="uid://ty3i5t2iib5m" path="res://assets/background/background.jpeg" id="2_yonvy"]
[ext_resource type="FontFile" uid="uid://b8voeab17mwje" path="res://assets/fonts/PressStart2P-Regular.ttf" id="3_5jstl"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l6cm7"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8ln24"]

[sub_resource type="Animation" id="Animation_bqqt6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("ShaderMaterial_l6cm7")]
}

[sub_resource type="Animation" id="Animation_ekxnf"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("ShaderMaterial_l6cm7")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wu84c"]
_data = {
&"RESET": SubResource("Animation_bqqt6"),
&"blur": SubResource("Animation_ekxnf")
}

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qwnig")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(582, 318.25)
scale = Vector2(1.89369, 1.57407)
texture = ExtResource("2_yonvy")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
texture_filter = 1
material = SubResource("ShaderMaterial_l6cm7")
layout_mode = 0
offset_right = 1151.0
offset_bottom = 633.0

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 436.0
offset_top = 238.0
offset_right = 500.0
offset_bottom = 330.0
scale = Vector2(4.48568, 3.46959)

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="PanelContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_5jstl")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxTexture_8ln24")
text = "Start
"

[node name="CreditsButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_5jstl")
theme_override_font_sizes/font_size = 8
text = "Credits"

[node name="QuitButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_5jstl")
theme_override_font_sizes/font_size = 8
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wu84c")
}

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.226563
anchor_top = 0.248457
anchor_right = 0.789063
anchor_bottom = 0.320988
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_5jstl")
theme_override_font_sizes/font_size = 24
text = "INDEX LIBRORUM PROHIBITORUM"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="PanelContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
